--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -172,17 +172,88 @@
                 <h1 class="text-left" style="color: white; font-size:12px; padding-top:17px"><FONT face="PlayfairDisplay-Regular">We are a group of top SW engineers<br>to develop quality software
                         and services as the discipline of developing and applying systematic and quantitative engineering
                         to software development, operation,<br>and management activities.</FONT></h1>
+
             </div>
         </div>
+
     </div>
 
-    <div class="container-fluid" style="position: absolute; pointer-events: none; margin-top: 50px; bottom:-80px;">
+    <div class="container-fluid" style="position: absolute; pointer-events: none; bottom:-30px;">
         <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8" style="background-color:rgba( 0, 0, 0, 0.5 ); padding: 80px;">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8" style="background-color:rgba( 0, 0, 0, 0.5 ); padding-top: 45px; padding-bottom: 40px;">
+
+                <!--
                 <p style="color:white; font-size: 20px; text-align:center">* It's under being modified now *</p>
+                -->
+                <div id="blogCarousel" class="carousel slide" data-ride="carousel" style="pointer-events: auto">
+
+                    <!-- Carousel items -->
+                    <div class="carousel-inner">
+                        {% if journal %}
+                        <div class="carousel-item active text-center">
+                            <a style="color:white" href="/ppr/publication/?q=1&?page=1">
+                                <i>/* Our Newest International Journal */</i><br><br>
+                                TITLE: {{ journal.title | truncatechars:70 }}<br>
+                                JOURNALS: {{ journal.journals }}<br>
+                                DATE: {{ journal.issued_date }}
+                            <!--.row-->
+                            </a>
+                        </div>
+                        {% endif %}
+                        <!--.item-->
+
+                        <div class="carousel-item text-center">
+                            <a style="color:white" href="/ppr/publication/?q=2&?page=1">
+                                <i>/* Our Newest Domestic Journal */</i><br><br>
+                                {% if publication %}
+                                    TITLE: {{ publication.title | truncatechars:70 }}<br>
+                                    PUBLISHER: {{ publication.journals }}<br>
+                                    PUBLISHED DATE: {{ publication.issued_date }}
+                                {% endif %}
+                            </a>
+                            <!--.row-->
+                        </div>
+                        <!--.item-->
+
+                        <div class="carousel-item text-center">
+                            <a style="color:white" href="/notice/">
+                                <i>/* Our Newest Notice */</i><br><br>
+                                {% if notice %}
+                                TITLE: {{ notice.title | truncatechars:70 }}<br>
+                                REGISTERED DATE: {{ content.registered_date }}<br>
+                                HITS: {{ notice.hits}}<br>
+                                {% endif %}
+                            </a>
+                            <!--.row-->
+                        </div>
+                        <!--.item-->
+
+                    </div>
+                    <!--.carousel-inner-->
+                    <br><br><br>
+
+                    <!-- 밑 페이지 indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#blogCarousel" data-slide-to="1"></li>
+                        <li data-target="#blogCarousel" data-slide-to="2"></li>
+                    </ol>
+
+
+                    <!-- 좌, 우 control buttons
+                    <a class="left carousel-control-prev" href="#blogCarousel" role="button" data-slide="prev">
+                        <span class="fa fa-angle-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control-next" href="#blogCarousel" role="button" data-slide="next">
+                        <span class="fa fa-angle-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    -->
+                </div>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-lg-2"></div>
         </div>
     </div>
 
