--- a/templates/ppr/publication_write.html
+++ b/templates/ppr/publication_write.html
@@ -7,10 +7,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
+        #id_title{
+
+        }
         #id_published_date{
             height: 34px;
-            width: 300px;
+            width: 700px;
         }
+
     </style>
 </head>
 <body>
