--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -59,7 +59,7 @@
 <div id="particles-js">
     <div class="navbar" style="background:linear-gradient(to bottom, rgba(50,50,50,0.9), rgba(60,60,60,0.65));">
         <a class="mr-auto font-weight-bold cbnu_logo" style="color:grey;" href="https://chungbuk.ac.kr"><img src="../../static/images/CBNU_logo2.png" width="60px" /></a>
-        <a id="mail_logo" class="ml-auto cbnu_logo" style="cursor: pointer;color:white;"><span class="fas fa-envelope"></span> jehong@chungbuk.ac.kr</a>
+        <a id="mail_logo" class="ml-auto cbnu_logo" style="cursor: pointer;color:white;"><span class="fas fa-envelope"></span> admin@chungbuk.ac.kr</a>
     </div>
 
     <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background:linear-gradient(to bottom, rgba(60,60,60,0.65), rgba(90,90,90,0)) !important;">
