--- a/templates/ppr/journal_write.html
+++ b/templates/ppr/journal_write.html
@@ -103,10 +103,10 @@
 
     <script type="text/javascript">
         function delete_modal1() {
-            location.replace('/ppr/international/{{ journal.id }}/delete/');
+            location.replace('/ppr/international/{{ journal.id }}/delete/?q=1&?page=1');
         }
         function delete_modal2() {
-            location.replace('/ppr/domestic/{{ journal.id }}/delete/');
+            location.replace('/ppr/domestic/{{ journal.id }}/delete/?q=2&?page=1');
         }
     </script>
 
