--- a/templates/tabs/activities_write.html
+++ b/templates/tabs/activities_write.html
@@ -70,7 +70,7 @@
 
         <script type="text/javascript">
             function delete_modal() {
-                location.replace('/tabs/activities/{{ activities.id }}/delete/');
+                location.replace('/tabs/activities/{{ activities.id }}/delete/?q=7&?page=1');
             }
         </script>
 
