--- a/templates/tabs/award_write.html
+++ b/templates/tabs/award_write.html
@@ -76,7 +76,7 @@
 
         <script type="text/javascript">
             function delete_modal() {
-                location.replace('/tabs/award/{{ award.id }}/delete/');
+                location.replace('/tabs/award/{{ award.id }}/delete/?q=4&?page=1');
             }
         </script>
     </form>
