--- a/templates/tabs/conference_write.html
+++ b/templates/tabs/conference_write.html
@@ -79,7 +79,7 @@
 
         <script type="text/javascript">
             function delete_modal() {
-                location.replace('/tabs/conference/{{ conference.id }}/delete/');
+                location.replace('/tabs/conference/{{ conference.id }}/delete/?q=3&?page=1');
             }
         </script>
 
