--- a/templates/tabs/etc_write.html
+++ b/templates/tabs/etc_write.html
@@ -73,7 +73,7 @@
 
     <script type="text/javascript">
         function delete_modal1() {
-            location.replace('/tabs/etc/{{ etc.id }}/delete/');
+            location.replace('/tabs/etc/{{ etc.id }}/delete/?q=8&?page=1');
         }
     </script>
 
