--- a/templates/tabs/ip_write.html
+++ b/templates/tabs/ip_write.html
@@ -84,7 +84,7 @@
 
         <script type="text/javascript">
             function delete_modal() {
-                location.replace('/tabs/ip/{{ IP.id }}/delete/');
+                location.replace('/tabs/ip/{{ IP.id }}/delete/?q=6&?page=1');
             }
         </script>
 
