--- a/templates/tabs/rp_write.html
+++ b/templates/tabs/rp_write.html
@@ -79,7 +79,7 @@
 
         <script type="text/javascript">
             function delete_modal() {
-                location.replace('/tabs/rp/{{ RP.id }}/delete/');
+                location.replace('/tabs/rp/{{ RP.id }}/delete/?q=5&?page=1');
             }
         </script>
 
