--- a/templates/ppr/journal_write.html
+++ b/templates/ppr/journal_write.html
@@ -56,7 +56,7 @@
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal2">delete</button>
         {% endif %}
 
-        <button type="button" class="btn btn-own" onclick="location.href='/ppr/publication'">To the list</button>
+        <button type="button" class="btn btn-own" onclick="location.href='/ppr/publication/?q=1&?page=1'">To the list</button>
     </form>
 
     <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
