--- a/templates/tabs/etc_write.html
+++ b/templates/tabs/etc_write.html
@@ -47,7 +47,7 @@
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal1">delete</button>
         {% endif %}
 
-        <button type="button" class="btn btn-own" onclick="location.href='/ppr/publication'">To the list</button>
+        <button type="button" class="btn btn-own" onclick="location.href='/ppr/publication?q=8&?page=1'">To the list</button>
     </form>
 
     <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
