--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -43,12 +43,12 @@
         $(function(){
             $("#mail_logo").click(function(){
                 var tempElem = document.createElement('textarea');
-                tempElem.value = 'jehong@chungbuk.ac.kr';
+                tempElem.value = 'admin@selab.chungbuk.ac.kr';
                 document.body.appendChild(tempElem);
                 tempElem.select();
                 document.execCommand("copy");
                 document.body.removeChild(tempElem);
-                alert("copied: jehong@chungbuk.ac.kr");
+                alert("copied: admin@selab.chungbuk.ac.kr");
             });
         });
     </script>
